[gd_scene load_steps=80 format=3 uid="uid://b68ha3p51sfe3"]

[ext_resource type="Texture2D" uid="uid://bfopp07xj580a" path="res://assets/Sprites/Player/Player_New/Player_Anim/Player_Idle_Run_Death_Anim.png" id="1_dxmtx"]
[ext_resource type="Script" path="res://scenes/Player/Player.gd" id="1_i7byd"]
[ext_resource type="Texture2D" uid="uid://cggksrmqothxj" path="res://assets/Sprites/Player/Player_New/Weapons/Iron_Tools.png" id="2_p0ar4"]
[ext_resource type="Resource" uid="uid://dwkcpverg03fs" path="res://tres/PlayerStats.tres" id="2_tjw1w"]
[ext_resource type="AudioStream" uid="uid://dy0mf64enr5db" path="res://assets/Sound/SFX/grass_footsteps.wav" id="3_j0851"]
[ext_resource type="Resource" uid="uid://b1vco66yitpn4" path="res://tres/PlayerInventory.tres" id="3_qx4f2"]
[ext_resource type="Texture2D" uid="uid://cxiqt0lfj7loe" path="res://assets/Sprites/Player/Player_New/Player_Anim/Player_Actions_Anim.png" id="4_nmvse"]
[ext_resource type="AudioStream" uid="uid://cpoaa2vaagxn8" path="res://assets/Sound/SFX/hit_effect.wav" id="6_3h5tr"]
[ext_resource type="PackedScene" uid="uid://cwfwo5nreqf1f" path="res://scenes/Player/EnergyBar.tscn" id="7_fpkas"]
[ext_resource type="AudioStream" uid="uid://pitaschqnyhh" path="res://assets/Sound/SFX/hotbar_switch.wav" id="8_wrt3f"]
[ext_resource type="PackedScene" uid="uid://shi81id6fyeu" path="res://scenes/Player/MoneyBar.tscn" id="9_71jm7"]
[ext_resource type="PackedScene" uid="uid://cwe2ruhtjjaxe" path="res://scenes/Player/InventoryBar.tscn" id="10_2oapp"]
[ext_resource type="FontFile" uid="uid://cu5w45rcnjrwx" path="res://assets/Fonts/Daydream.ttf" id="12_jmxef"]

[sub_resource type="AtlasTexture" id="AtlasTexture_lqg22"]
atlas = ExtResource("2_p0ar4")
region = Rect2(0, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6svq7"]
atlas = ExtResource("2_p0ar4")
region = Rect2(48, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hqkcv"]
atlas = ExtResource("2_p0ar4")
region = Rect2(96, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1p5pb"]
atlas = ExtResource("2_p0ar4")
region = Rect2(144, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ne3mo"]
atlas = ExtResource("2_p0ar4")
region = Rect2(192, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_b2n4c"]
atlas = ExtResource("2_p0ar4")
region = Rect2(240, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vutld"]
atlas = ExtResource("2_p0ar4")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_d244r"]
atlas = ExtResource("2_p0ar4")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0h237"]
atlas = ExtResource("2_p0ar4")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_brier"]
atlas = ExtResource("2_p0ar4")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qt8na"]
atlas = ExtResource("2_p0ar4")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_a0ib3"]
atlas = ExtResource("2_p0ar4")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0gb2w"]
atlas = ExtResource("2_p0ar4")
region = Rect2(0, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_eb7a3"]
atlas = ExtResource("2_p0ar4")
region = Rect2(48, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_cfun0"]
atlas = ExtResource("2_p0ar4")
region = Rect2(96, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_lh48d"]
atlas = ExtResource("2_p0ar4")
region = Rect2(144, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ogfvx"]
atlas = ExtResource("2_p0ar4")
region = Rect2(192, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_y4lli"]
atlas = ExtResource("2_p0ar4")
region = Rect2(240, 96, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_40eol"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lqg22")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6svq7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqkcv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1p5pb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ne3mo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b2n4c")
}],
"loop": false,
"name": &"pickaxe_down",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vutld")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d244r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0h237")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_brier")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qt8na")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a0ib3")
}],
"loop": true,
"name": &"pickaxe_horizontal",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0gb2w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eb7a3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cfun0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lh48d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ogfvx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y4lli")
}],
"loop": false,
"name": &"pickaxe_up",
"speed": 8.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_3gtbl"]
atlas = ExtResource("1_dxmtx")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u0tw1"]
atlas = ExtResource("1_dxmtx")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ihpe"]
atlas = ExtResource("1_dxmtx")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_83qda"]
atlas = ExtResource("1_dxmtx")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jmukm"]
atlas = ExtResource("1_dxmtx")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_metvu"]
atlas = ExtResource("1_dxmtx")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bshjm"]
atlas = ExtResource("4_nmvse")
region = Rect2(0, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_lhe1k"]
atlas = ExtResource("4_nmvse")
region = Rect2(48, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6sek2"]
atlas = ExtResource("4_nmvse")
region = Rect2(96, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_c3ghv"]
atlas = ExtResource("4_nmvse")
region = Rect2(144, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3pl38"]
atlas = ExtResource("4_nmvse")
region = Rect2(192, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4m60v"]
atlas = ExtResource("4_nmvse")
region = Rect2(240, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_sp7gl"]
atlas = ExtResource("4_nmvse")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jalj0"]
atlas = ExtResource("4_nmvse")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_pa1fh"]
atlas = ExtResource("4_nmvse")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_oqtgy"]
atlas = ExtResource("4_nmvse")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ht0ox"]
atlas = ExtResource("4_nmvse")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hpd03"]
atlas = ExtResource("4_nmvse")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ak848"]
atlas = ExtResource("4_nmvse")
region = Rect2(0, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2baiq"]
atlas = ExtResource("4_nmvse")
region = Rect2(48, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_no4nc"]
atlas = ExtResource("4_nmvse")
region = Rect2(96, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_73emj"]
atlas = ExtResource("4_nmvse")
region = Rect2(144, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_t3c20"]
atlas = ExtResource("4_nmvse")
region = Rect2(192, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ihnp"]
atlas = ExtResource("4_nmvse")
region = Rect2(240, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ofkhd"]
atlas = ExtResource("1_dxmtx")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ijxod"]
atlas = ExtResource("1_dxmtx")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ne7t"]
atlas = ExtResource("1_dxmtx")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_11nhu"]
atlas = ExtResource("1_dxmtx")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ueskx"]
atlas = ExtResource("1_dxmtx")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lch11"]
atlas = ExtResource("1_dxmtx")
region = Rect2(160, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ysasx"]
atlas = ExtResource("1_dxmtx")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u50e7"]
atlas = ExtResource("1_dxmtx")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gj2bq"]
atlas = ExtResource("1_dxmtx")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7qcoy"]
atlas = ExtResource("1_dxmtx")
region = Rect2(96, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ujaj"]
atlas = ExtResource("1_dxmtx")
region = Rect2(128, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uf83p"]
atlas = ExtResource("1_dxmtx")
region = Rect2(160, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sxfec"]
atlas = ExtResource("1_dxmtx")
region = Rect2(0, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dtw8p"]
atlas = ExtResource("1_dxmtx")
region = Rect2(32, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m2x10"]
atlas = ExtResource("1_dxmtx")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5wvrv"]
atlas = ExtResource("1_dxmtx")
region = Rect2(96, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qqeic"]
atlas = ExtResource("1_dxmtx")
region = Rect2(128, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xvmol"]
atlas = ExtResource("1_dxmtx")
region = Rect2(160, 160, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_8jqql"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3gtbl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u0tw1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ihpe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_83qda")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jmukm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_metvu")
}],
"loop": true,
"name": &"idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bshjm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lhe1k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6sek2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c3ghv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3pl38")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4m60v")
}],
"loop": false,
"name": &"mine_down",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sp7gl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jalj0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pa1fh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oqtgy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ht0ox")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hpd03")
}],
"loop": false,
"name": &"mine_horizontal",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ak848")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2baiq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_no4nc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_73emj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t3c20")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ihnp")
}],
"loop": false,
"name": &"mine_up",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ofkhd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ijxod")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ne7t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_11nhu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ueskx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lch11")
}],
"loop": true,
"name": &"walk_down",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ysasx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u50e7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gj2bq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7qcoy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ujaj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uf83p")
}],
"loop": true,
"name": &"walk_horizontal",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sxfec")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dtw8p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m2x10")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5wvrv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qqeic")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xvmol")
}],
"loop": true,
"name": &"walk_up",
"speed": 8.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k7fqk"]
size = Vector2(21, 4.5)

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_0md2w"]
random_pitch = 1.09
streams_count = 1
stream_0/stream = ExtResource("3_j0851")
stream_0/weight = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_4207j"]
random_pitch = 1.1
streams_count = 1
stream_0/stream = ExtResource("6_3h5tr")
stream_0/weight = 1.0

[sub_resource type="CircleShape2D" id="CircleShape2D_0sj44"]
radius = 14.0

[node name="Player" type="CharacterBody2D"]
y_sort_enabled = true
script = ExtResource("1_i7byd")
stats = ExtResource("2_tjw1w")
inventory = ExtResource("3_qx4f2")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(3.05176e-05, 3.05176e-05)

[node name="ToolSprite2D" type="AnimatedSprite2D" parent="."]
visible = false
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_40eol")
animation = &"pickaxe_down"
frame = 3
frame_progress = 0.0610465

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_8jqql")
animation = &"idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1.5, 18.25)
shape = SubResource("RectangleShape2D_k7fqk")

[node name="Footsteps" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_0md2w")
volume_db = -10.0
pitch_scale = 2.0

[node name="HotbarSwitch" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_wrt3f")

[node name="Hit" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_4207j")
pitch_scale = 0.8

[node name="Timer" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[node name="EnergyBar" parent="." instance=ExtResource("7_fpkas")]
z_index = 100
z_as_relative = false
position = Vector2(803, 469)
scale = Vector2(2.5, 2.5)

[node name="MoneyBar" parent="." instance=ExtResource("9_71jm7")]
z_index = 100
z_as_relative = false
position = Vector2(866, -509)
scale = Vector2(2.5, 2.5)

[node name="InventoryBar" parent="." instance=ExtResource("10_2oapp")]
z_index = 100
position = Vector2(0, 492)
scale = Vector2(3, 3)

[node name="EnterText" type="RichTextLabel" parent="."]
visible = false
z_index = 999
clip_contents = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -370.0
offset_top = 326.0
offset_right = 373.0
offset_bottom = 390.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("12_jmxef")
theme_override_font_sizes/normal_font_size = 48
text = "Press 'E' To Enter"

[node name="ActionArea" type="Area2D" parent="."]

[node name="ActionCollisionRight" type="CollisionShape2D" parent="ActionArea"]
position = Vector2(46, 13)
shape = SubResource("CircleShape2D_0sj44")
disabled = true

[node name="ActionCollisionBottom" type="CollisionShape2D" parent="ActionArea"]
position = Vector2(-1, 52)
shape = SubResource("CircleShape2D_0sj44")
disabled = true

[node name="ActionCollisionTop" type="CollisionShape2D" parent="ActionArea"]
position = Vector2(-2, -26)
shape = SubResource("CircleShape2D_0sj44")
disabled = true

[node name="ActionCollisionLeft" type="CollisionShape2D" parent="ActionArea"]
position = Vector2(-49, 14)
shape = SubResource("CircleShape2D_0sj44")
disabled = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
